[package]
name = "vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"
aes-gcm = "0.10.3"
aes-soft = "0.99"
tokio = { version = "1", features = ["full", "signal"] }
tun = "0.6.1"
tun-tap = "0.1.4"
serde = "1.0"
serde_derive = "1.0.190"
bincode = "1.3"
rand = "0.8"
anyhow = "1.0"
ctrlc = "3.1"
aes = "0.8"
block-modes = "0.9"
block-padding = "0.3"
generic-array = "1.0"
socket2 = "0.5.6"
env_logger = "0.11.3"
log = "0.4.20"